--- a/app/assets/stylesheets/feature/_pagination.scss
+++ b/app/assets/stylesheets/feature/_pagination.scss
@@ -14,7 +14,11 @@
     width: min-content;
 
     > * {
+
         font-weight: bold;
-        font-size:   smaller;
+
+        @media #{$wide-screen} {
+            font-size: small;
+        }
     }
 }
