--- a/app/assets/stylesheets/feature/_search.scss
+++ b/app/assets/stylesheets/feature/_search.scss
@@ -15,10 +15,10 @@ $results-entry-gap-x:    $page-padding-x;
 $ie-results-entry-gap-x: $ie-page-padding-x;
 
 // noinspection SassScssResolvedByNameOnly
-$results-entry-gap-y:    calc(2 * #{$page-padding-y});
+$results-entry-gap-y:    $page-padding;
 
 // noinspection SassScssResolvedByNameOnly
-$ie-results-entry-gap-y: 2 * $ie-page-padding-y;
+$ie-results-entry-gap-y: $ie-page-padding;
 
 //=============================================================================
 // Search controls
@@ -34,6 +34,11 @@ $ie-results-entry-gap-y: 2 * $ie-page-padding-y;
     // noinspection SassScssResolvedByNameOnly
     @media #{$browser-ie} {
         margin: $ie-results-entry-gap-y 0;
+    }
+
+    // noinspection SassScssResolvedByNameOnly
+    @media #{$narrow-screen} {
+        margin: calc(2 * #{$results-entry-gap-y}) 0;
     }
 }
 
@@ -162,6 +167,12 @@ $ie-results-entry-gap-y: 2 * $ie-page-padding-y;
     //=========================================================================
     // Classes
     //=========================================================================
+
+    // Make focus outline follow the perimeter of the area of clickable text
+    // rather than the individual lines.
+    a {
+        display: inline-block;
+    }
 
     // noinspection CssOverwrittenProperties
     .label,
